--- a/vaConnect/Properties/Resources.resx
+++ b/vaConnect/Properties/Resources.resx
@@ -127,4 +127,7 @@
   <data name="EapTTLSy" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\EapTTLSy.xml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="fon_logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\images\fon_logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
