--- a/vaConnect/Properties/Resources.resx
+++ b/vaConnect/Properties/Resources.resx
@@ -130,4 +130,7 @@
   <data name="fon_logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\images\fon_logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="UriVAConnect" xml:space="preserve">
+    <value>https://vmnac-int.fon.com</value>
+  </data>
 </root>
